fix: avatar size on iphone

--- a/style/style.scss
+++ b/style/style.scss
@@ -370,6 +370,10 @@ body {
             & figure {
                 width: 70%;
                 height: 70%;
+                & img {
+                    object-fit: cover;
+                }
+                
             }
         }
         & .aim-contacts {
